[build-system]
requires = [
    "setuptools>=42",
    "scikit-build>=0.13",
    "cmake>=3.18",
    "ninja",
    # "vtk",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp311-*" # build wheels only for one Python version
skip = "pp*"      # skip all pypy builds


[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.macos.environment]
CC = "clang"
CXX = "clang++"

[tool.cibuildwheel.windows]
archs = ["auto64"]
