[build-system]
requires = [
    "setuptools>=61",
    "scikit-build>=0.13",
    "cmake>=3.18",
    "ninja",
    "setuptools_scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "pymmg"
license = "LGPL-3.0-or-later"
authors = [{ name = "gnikit" }]
requires-python = ">=3.7"
dependencies = ["meshio"]
description = "Surface and volume mesh and remesh generators based on MMG library"
readme = "README.md"
keywords = ["mesh", "remesh", "mesh generation", "unstructured"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
dynamic = ["version", "entry-points", "scripts"]

[project.urls]
Homepage = "https://www.mmgtools.org/"
"Source Code" = "https://github.com/gnikit/pymmg"
Bugs = "https://github.com/gnikit/pymmg/issues"
Dicsussions = "https://forum.mmgtools.org/"

[project.optional-dependencies]
all = ["meshio[all]"]

[tool.setuptools_scm]
write_to = "src/pymmg/general/_version.py"

[tool.cibuildwheel]
build = "cp311-*" # build wheels only for one Python version
skip = "pp*"      # skip all pypy builds


[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.macos.environment]
CC = "clang"
CXX = "clang++"

[tool.cibuildwheel.windows]
archs = ["auto64"]
